--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"Keelyn's Blog",
     "subTitle":"我们总有道路",
-    "avatarUrl":"file:///C:/Users/Keelyn/Downloads/%E7%A6%8F%E5%B0%94%E6%91%A9%E5%8F%B2&%E5%8D%8E%E5%A3%AB%E6%89%98%EF%BC%9F_1_%E5%8F%B2%E5%8A%AA%E6%AF%94%E7%B3%8A%E7%B3%8A%E8%B4%B4%E5%9B%BE%E9%9B%86_%E6%9D%A5%E8%87%AA%E5%B0%8F%E7%BA%A2%E4%B9%A6%E7%BD%91%E9%A1%B5%E7%89%88.jpg",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/135981318?v=4&size=64",
     "GMEEK_VERSION":"last"
 }
